# advent-of-code-ai

./: Makefile  config.ini  day_1.py  day_10_2023.py  day_12_2023.py  day_13_2023.py  day_1_2023.py  day_1_2024.py  day_2_2023.py  day_2_2024.py  day_3_2024.py  day_4_2023.py  day_4_2024.py  day_5_2023.py  day_5_2024 copy.py  day_5_2024.py  day_6_2023.py  day_6_2024.py  day_7_2024.py  day_8_2024.py  main.py  prompt.py  pyproject.toml  template.py  test.ipynb  utils.py
